// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v3 > v3 1`] = `
".space-x-4>view+view {
}
.divide-x>view+view {
}
.divide-blue-200>view+view {
}
.divide-dashed>view+view {
}
.ttt>view+view {
}
"
`;

exports[`v3 > v3 bbb 1`] = `
"
    .divide-dashed>view+view {
}
.ttt>view+view {
}

    "
`;

exports[`v3 > v3 case 0 1`] = `
".space-x-4>view+view {
}
.divide-x>view+view {
}
.divide-blue-200>view+view {
}
.divide-dashed>view+view {
}
.ttt>view+view {
}

/*# sourceMappingURL=to.css.map */"
`;

exports[`v3 > v3 case 0 2`] = `
{
  "file": "to.css",
  "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA",
  "names": [],
  "sources": [
    "xxx.css",
  ],
  "sourcesContent": [
    null,
  ],
  "version": 3,
}
`;

exports[`v3 > v3 uni-app x 1`] = `
"
"
`;
